Change log for the PMD Eclipse plugin

v4.0.0 - xxx 2011?
. New integrated AST View and XPath test area 
. New rule creation wizard
. New report preferences panel
. New file filter panel for exclusion/inclusion entries
. User-definable rule violation markers 
     Highest priority markers also decorate folders & projects (selectable)
. Colour syntax highlighting in code viewers/editors
. Expanded rule import dialog to show incoming rules and any duplicates
. Export rule function now only exports selected rules
. Overhauled rule preferences screen
.    allows users to group/edit rules by multiple criteria
.    new ability to enable/disable rules without removing them from rulesets
.    larger editors for the various fields
.	 support for non-Java languages
.    group editing of rule exclusion filters
.    highlighting of non-default property values
.    colour-tagged expressions in shown in rule table
.    new property editors are fully type-aware
.	 misconfigured rules are highlighted
. Huge code cleanup
. Several usability fixes for the Dataflow view
. Updated to use latest SWT widgets wherever possible
. New option to control the launch of a full build per project - Thanks to Joe Freeman
. Check code from working set selections - Thanks to Dominik
-------------------------------------
v3.2.5 - October 13 2008

. PMD updated to v4.2.4
. plugin reorganization
. code cleanup
. all rule examples displayed in Rule Configuration panel
. Full file path now set on RuleContext.setSouceCodeFile(file) instead of workspace relative path

----------------------------------------------------------------------------------------
v3.2.4 - April 11 2008

Runtime
-------
. Fix 1811828 RuntimeException in RuleSetFactory, default ruleset is used on error
. Fix 1903578 Handler error in Eclipse log
. Fix 1909929 clean violation review is not selective enough
. PMD updated to v4.2.1
. Use new standard PMD RuleSet serialization mechanism